--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "npx nodemon --exec npx babel-node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.24.0",
+    "body-parser": "^1.20.2",
     "express": "^4.18.3"
   },
   "devDependencies": {
@@ -18,6 +20,7 @@
     "@babel/core": "^7.24.0",
     "@babel/node": "^7.23.9",
     "@babel/plugin-transform-runtime": "^7.24.0",
-    "@babel/preset-env": "^7.24.0"
+    "@babel/preset-env": "^7.24.0",
+    "nodemon": "^3.1.0"
   }
 }
