--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@babel/runtime": "^7.24.0",
     "body-parser": "^1.20.2",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "mongodb": "^6.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
